[project]
name = "repl-nix-travelbuddy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.2.2",
    "openai>=1.52.2",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "requests",
    "flask-limiter>=3.8.0",
    "flask-talisman>=1.1.0",
    "bleach>=6.1.0",
    "sqlalchemy>=2.0.36",
    "wtforms>=3.2.1",
    "redis>=5.2.0",
    "flask-redis>=0.4.0",
    "flask-session>=0.8.0",
    "flask-caching>=2.3.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.151.0",
    "werkzeug>=3.0.6",
]
